--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "NODE": "env-cmd -f ./config/dev.env node src/index.js"
+    "NODE": "env-cmd -f ./config/dev.env node src/index.js",
+    "start": "node src/index.js"
   },
   "author": "",
   "license": "ISC",
